--- a/script.ipynb
+++ b/script.ipynb
@@ -355,6 +355,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "inclusion_score = [[f_1_1  , f_1_2  , ..., f_63_1  ],\n",
+    "                    ...,\n",
+    "                   [f_1_M-1, f_1_M-1, ..., f_63_M-1]]\n",
+    "M = number of points\n",
+    "64 = hidden dimensions\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
