Premières implémentations de Chamfer_loss et Triangle Collision Loss

--- a/script.ipynb
+++ b/script.ipynb
@@ -1674,6 +1674,102 @@
    "source": [
     "print(\"Chamfer distance d_P_Ps : \", d_P_Ps(keys_input, keys_output, 0.2))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chamfer_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def chamfer_loss(ground_truth_barycenters, generated_barycenters, probabilities):\n",
+    "    \"\"\"\n",
+    "    Calculate Chamfer loss between a ground truth surface and a probabilistic surface.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - ground_truth_barycenters (numpy.ndarray): Array of barycenters of the ground truth surface.\n",
+    "    - generated_barycenters (numpy.ndarray): Array of barycenters of the generated triangles with respective probabilities.\n",
+    "    - probabilities (numpy.ndarray): Array of probabilities for the generated barycenters.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: Chamfer-inspired loss.\n",
+    "    \"\"\"\n",
+    "    # Calculate the squared distances between each pair of generated and ground truth barycenters\n",
+    "    distances_squared = np.sum((generated_barycenters[:, None] - ground_truth_barycenters)**2, axis=2)\n",
+    "\n",
+    "    # Find the minimum distances for each generated barycenter\n",
+    "    min_distances = np.min(distances_squared, axis=1)\n",
+    "\n",
+    "    # Calculate the final Chamfer-inspired loss by combining probabilities and minimum distances\n",
+    "    loss = np.sum(probabilities * min_distances)\n",
+    "\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Triangle Collision Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def triangle_collision_loss(generated_triangles, probabilities):\n",
+    "    \"\"\"\n",
+    "    Calculate triangle collision loss to penalize triangles that penetrate each other.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - generated_triangles (numpy.ndarray): Array representing the generated triangles.\n",
+    "    - probabilities (numpy.ndarray): Array of probabilities for each generated triangle.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: Triangle collision loss.\n",
+    "    \"\"\"\n",
+    "    num_triangles = len(generated_triangles)\n",
+    "\n",
+    "    # Create a 3D array to represent all combinations of triangle pairs\n",
+    "    triangle_pairs_i, triangle_pairs_j = np.meshgrid(range(num_triangles), range(num_triangles), indexing='ij')\n",
+    "\n",
+    "    # Filter out pairs where i is not equal to j\n",
+    "    valid_pairs_mask = triangle_pairs_i != triangle_pairs_j\n",
+    "\n",
+    "    # Extract triangles and probabilities for each pair\n",
+    "    triangles_i = generated_triangles[triangle_pairs_i[valid_pairs_mask]]\n",
+    "    triangles_j = generated_triangles[triangle_pairs_j[valid_pairs_mask]]\n",
+    "    probs_i = probabilities[triangle_pairs_i[valid_pairs_mask]]\n",
+    "\n",
+    "    # Calculate the plane normals and distances for all triangles\n",
+    "    plane_normals = np.cross(triangles_i[:, 1] - triangles_i[:, 0], triangles_i[:, 2] - triangles_i[:, 0])\n",
+    "\n",
+    "    # Calculate the edge vectors for all edges of triangles_j\n",
+    "    edge_vectors = triangles_j[:, [1, 2, 0], :] - triangles_j[:, [0, 1, 2], :]\n",
+    "\n",
+    "    # Calculate the dot product of edge vectors and plane normals\n",
+    "    dot_products = np.sum(np.cross(edge_vectors, plane_normals[:, np.newaxis, :]) * triangles_i[:, 0], axis=2)\n",
+    "\n",
+    "    # Count the number of faces penetrated for each triangle\n",
+    "    faces_penetrated = np.sum(dot_products < 0, axis=1)\n",
+    "\n",
+    "    # Calculate the loss for each triangle\n",
+    "    loss_per_triangle = probs_i * faces_penetrated\n",
+    "\n",
+    "    # Sum up the losses and normalize by the number of triangles\n",
+    "    triangle_losses = np.sum(loss_per_triangle) / num_triangles\n",
+    "\n",
+    "    return triangle_losses\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
