Probabilistic Surfaces Distance ok

--- a/script.ipynb
+++ b/script.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'igraph'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 7\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m mean\n\u001b[1;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01migraph\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Graph \u001b[38;5;28;01mas\u001b[39;00m igraphGraph\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmpl_toolkits\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmplot3d\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Axes3D\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'igraph'"
+     ]
+    }
+   ],
    "source": [
     "from Transformation import Transformation\n",
     "import numpy as np\n",
@@ -34,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +61,7 @@
    "source": [
     "transformation = Transformation()\n",
     "\n",
-    "user_number_triangles = 2500\n",
+    "user_number_triangles = 2500   #à diminuer si le process est trop long\n",
     "number_neigh_tri = 20\n",
     "\n",
     "# Create objects\n",
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -237,19 +249,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of nodes: 5999\n",
-      "Number of edges: 45259\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\n_, indices = NearestNeighbors(n_neighbors=15).fit(list_k_nodes).kneighbors(list_k_nodes)        # KNN of the selected points\\n\\nextended_graph = nx.Graph()\\nfor index_poly, poly in enumerate(indices):                                 # For the neighbors of the 'index_poly' node\\n    current_node = tuple(list_k_nodes[poly[0]])                             # Tuple of the main node coordinates\\n    for index_other_node in poly[1:]:                                       # For every neighbors of the main node (main node is the first index)\\n        edge = current_node, tuple(list_k_nodes[index_other_node])          # Create an edge of two tuples\\n        extended_graph.add_edge(*edge)                                      # Add the edge to the graph\\n\\ntransformation.print_graph_properties(graph=extended_graph, display_graph=False, display_labels=False)\\n\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "\"\"\"\n",
     "_, indices = NearestNeighbors(n_neighbors=15).fit(list_k_nodes).kneighbors(list_k_nodes)        # KNN of the selected points\n",
     "\n",
     "extended_graph = nx.Graph()\n",
@@ -259,6 +274,45 @@
     "        edge = current_node, tuple(list_k_nodes[index_other_node])          # Create an edge of two tuples\n",
     "        extended_graph.add_edge(*edge)                                      # Add the edge to the graph\n",
     "\n",
+    "transformation.print_graph_properties(graph=extended_graph, display_graph=False, display_labels=False)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def knn_and_extended_graph(list_k_nodes_i, k_neighbors=15):\n",
+    "    \"\"\"\n",
+    "    Perform k-NN on the given points and construct an extended graph.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - list_k_nodes_i: array-like\n",
+    "        List of coordinates of the selected points.\n",
+    "    - k_neighbors: int, optional (default=15)\n",
+    "        Number of neighbors for k-NN.\n",
+    "\n",
+    "    Returns:\n",
+    "    - extended_graph_i: networkx.Graph\n",
+    "        Extended graph.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Perform k-NN on the selected points\n",
+    "    _, indices = NearestNeighbors(n_neighbors=k_neighbors).fit(list_k_nodes_i).kneighbors(list_k_nodes_i)\n",
+    "\n",
+    "    # Construct the extended graph\n",
+    "    extended_graph_i = nx.Graph()\n",
+    "    for index_poly, poly in enumerate(indices):\n",
+    "        current_node = tuple(list_k_nodes_i[poly[0]])\n",
+    "        for index_other_node in poly[1:]:\n",
+    "            edge = current_node, tuple(list_k_nodes_i[index_other_node])\n",
+    "            extended_graph_i.add_edge(*edge)\n",
+    "\n",
+    "    return extended_graph_i\n",
+    "\n",
+    "extended_graph = knn_and_extended_graph(list_k_nodes)\n",
     "transformation.print_graph_properties(graph=extended_graph, display_graph=False, display_labels=False)"
    ]
   },
@@ -271,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +621,7 @@
     }
    ],
    "source": [
-    "triangles = np.array(igraph_g.vs['name'])[triangles_ids_igraph]\n",
+    "triangles = np.array(igraph_g.vs['name'])[triangles_ids_igraph]   #les triangles\n",
     "# triangles = [list(map(tuple, row)) for row in triangles.tolist()]\n",
     "print(triangles[:3])\n",
     "print(len(triangles))"
@@ -575,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +864,7 @@
     "f_final = p_init    # TODO\n",
     "\n",
     "\n",
-    "final_scores = torch.nn.functional.softmax(torch.tensor(f_final))\n",
+    "final_scores = torch.nn.functional.softmax(torch.tensor(f_final))    #proba des triangles\n",
     "final_scores = final_scores.numpy()\n",
     "print(final_scores.sum())\n",
     "print(final_scores.shape)\n",
@@ -826,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -882,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1087,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1104,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1136,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1183,6 +1237,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.spatial.distance import cdist, pdist, squareform\n",
+    "def distance_euclidienne_barycentres(barycentre_b, barycentre_b_hat):\n",
+    "    \"\"\"\n",
+    "    Calculate distances between barycenters b et b_hat after the k-NN process.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - b_hat: array-like, shape (M, 3)\n",
+    "        Barycenters after k-NN.\n",
+    "    - number_neigh: int, optional (default=3)\n",
+    "        Number of neighbors for k-NN.\n",
+    "\n",
+    "    Returns:\n",
+    "    - distances_after: array-like, shape (M, M)\n",
+    "        Matrix of distances between barycenters after the k-NN process.\n",
+    "    \"\"\"\n",
+    "    return cdist(barycentre_b, barycentre_b_hat, metric='sqeuclidean')\n",
+    "    \n",
+    "distances = distance_euclidienne_barycentres(b, b_hat)\n",
+    "print(\"Distances euclidiennes entre les barycentres b et b_hat :\\n\", distances)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1191,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1359,7 +1440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
