changed distances matrix calculation

--- a/script.ipynb
+++ b/script.ipynb
@@ -22,7 +22,8 @@
     "from igraph import Graph as igraphGraph\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import scipy.spatial.distance \n"
+    "import scipy.spatial.distance\n",
+    "from scipy.spatial.distance import cdist\n"
    ]
   },
   {
@@ -1039,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -1048,27 +1049,40 @@
      "text": [
       "Squared Euclidean Distances Matrix Shape: (1500, 5999)\n",
       "Distances Matrix:\n",
-      " [[ 7867.0503  5768.4565  7859.4683 ... 11166.154  12036.375  11041.338 ]\n",
-      " [ 7812.2866  5721.4194  7804.0435 ... 11096.116  11958.7    10971.82  ]\n",
-      " [ 7720.0474  5644.561   7711.8296 ... 11015.479  11891.053  10891.962 ]\n",
+      " [[ 7867.05161297  5768.45601571  7859.46939709 ... 11166.15440199\n",
+      "  12036.37464803 11041.3379659 ]\n",
+      " [ 7812.28735261  5721.41934522  7804.0436133  ... 11096.11569302\n",
+      "  11958.69991718 10971.8209499 ]\n",
+      " [ 7720.04808769  5644.56023521  7711.82999046 ... 11015.47838291\n",
+      "  11891.0524893  10891.96295073]\n",
       " ...\n",
-      " [ 7756.9097  5672.153   7766.9106 ... 10717.55   11524.926  10589.88  ]\n",
-      " [ 6054.685   4215.603   6049.145  ...  8596.738   9224.941   8484.575 ]\n",
-      " [ 6026.439   4192.066   6020.901  ...  8566.422   9195.794   8454.497 ]]\n"
+      " [ 7756.91011183  5672.15327213  7766.91122206 ... 10717.55004298\n",
+      "  11524.925984   10589.87996349]\n",
+      " [ 6054.6841657   4215.60208673  6049.14412899 ...  8596.73759244\n",
+      "   9224.93989876  8484.57435921]\n",
+      " [ 6026.4390516   4192.06502039  6020.9009694  ...  8566.42177451\n",
+      "   9195.79349292  8454.49722827]]\n"
      ]
     }
    ],
    "source": [
-    "def squared_euclidean_distances(x, y):\n",
-    "    x_squared_sum = np.sum(x**2, axis=1)\n",
-    "    y_squared_sum = np.sum(y**2, axis=1)\n",
-    "    xy_dot_product = np.dot(y, x.T)\n",
+    "def matrix_distance_euclidienne_barycentres(barycentre_b, barycentre_b_hat):\n",
+    "    \"\"\"\n",
+    "    Calculate distances between barycenters b et b_hat after the k-NN process.\n",
     "\n",
-    "    distances = np.outer(y_squared_sum, np.ones_like(x_squared_sum)) - 2 * xy_dot_product + np.outer(np.ones_like(y_squared_sum), x_squared_sum)\n",
+    "    Parameters:\n",
+    "    - b_hat: array-like, shape (M, 3)\n",
+    "        Barycenters after k-NN.\n",
+    "    - number_neigh: int, optional (default=3)\n",
+    "        Number of neighbors for k-NN.\n",
     "\n",
-    "    return distances\n",
+    "    Returns:\n",
+    "    - distances_after: array-like, shape (M, M)\n",
+    "        Matrix of distances between barycenters after the k-NN process.\n",
+    "    \"\"\"\n",
+    "    return cdist(barycentre_b, barycentre_b_hat, metric='sqeuclidean').T\n",
     "\n",
-    "distances_matrix = squared_euclidean_distances(keys_input, keys_output)\n",
+    "distances_matrix = matrix_distance_euclidienne_barycentres(keys_input, keys_output)\n",
     "print(\"Squared Euclidean Distances Matrix Shape:\", distances_matrix.shape)\n",
     "print(\"Distances Matrix:\\n\", distances_matrix)\n",
     "\n",
@@ -1077,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1092,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
@@ -1138,14 +1152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chamfer Distance: 3.560129654472656\n"
+      "Chamfer Distance: 3.5601460037725214\n"
      ]
     }
    ],
@@ -1170,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
@@ -1250,49 +1264,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(32379, 11994)\n",
       "Distances euclidiennes entre les barycentres b et b_hat :\n",
-      " [[1339.41461725 1294.17818779 1247.44330439 ... 8602.38251559\n",
-      "  8561.29006183 8532.41337755]\n",
-      " [ 484.03083686  454.96148715  426.88801987 ... 6450.48394496\n",
-      "  6430.08967965 6416.28992173]\n",
-      " [ 476.85377059  465.45301444  483.13929615 ... 7537.86656395\n",
-      "  7537.60253167 7539.8144876 ]\n",
+      " [[1339.41461725  484.03083686  476.85377059 ...  371.94229538\n",
+      "    59.64058746  553.77366603]\n",
+      " [1294.17818779  454.96148715  465.45301444 ...  352.8685797\n",
+      "    48.68162275  531.40402943]\n",
+      " [1247.44330439  426.88801987  483.13929615 ...  311.59749029\n",
+      "    27.66753028  481.90322797]\n",
       " ...\n",
-      " [ 371.94229538  352.8685797   311.59749029 ... 3650.03020151\n",
-      "  3640.59495376 3633.05825883]\n",
-      " [  59.64058746   48.68162275   27.66753028 ... 5376.52619024\n",
-      "  5364.1864921  5353.95368706]\n",
-      " [ 553.77366603  531.40402943  481.90322797 ... 3149.66878316\n",
-      "  3140.30502681 3132.95093367]]\n"
+      " [8602.38251559 6450.48394496 7537.86656395 ... 3650.03020151\n",
+      "  5376.52619024 3149.66878316]\n",
+      " [8561.29006183 6430.08967965 7537.60253167 ... 3640.59495376\n",
+      "  5364.1864921  3140.30502681]\n",
+      " [8532.41337755 6416.28992173 7539.8144876  ... 3633.05825883\n",
+      "  5353.95368706 3132.95093367]]\n"
      ]
     }
    ],
    "source": [
-    "from scipy.spatial.distance import cdist, pdist, squareform\n",
-    "def matrix_distance_euclidienne_barycentres(barycentre_b, barycentre_b_hat):\n",
-    "    \"\"\"\n",
-    "    Calculate distances between barycenters b et b_hat after the k-NN process.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - b_hat: array-like, shape (M, 3)\n",
-    "        Barycenters after k-NN.\n",
-    "    - number_neigh: int, optional (default=3)\n",
-    "        Number of neighbors for k-NN.\n",
-    "\n",
-    "    Returns:\n",
-    "    - distances_after: array-like, shape (M, M)\n",
-    "        Matrix of distances between barycenters after the k-NN process.\n",
-    "    \"\"\"\n",
-    "    return cdist(barycentre_b, barycentre_b_hat, metric='sqeuclidean')\n",
-    "    \n",
     "distances = matrix_distance_euclidienne_barycentres(b, b_hat)\n",
+    "print(distances.shape)\n",
     "print(\"Distances euclidiennes entre les barycentres b et b_hat :\\n\", distances)\n"
    ]
   },
@@ -1305,14 +1304,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5643.6636 5906.267  5639.44   ... 2723.2537 1636.7125 2716.7126]\n"
+      "(11994,)\n",
+      "[1950.2314 3040.0283 3105.3853 ... 6075.3086 5692.7305 6270.884 ]\n"
      ]
     }
    ],
@@ -1324,12 +1324,13 @@
     "    return normes_carrees\n",
     "\n",
     "matrix_b = normes_euclidiennes_carrees_b(b)\n",
+    "print(matrix_b.shape)\n",
     "print(matrix_b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -1337,19 +1338,19 @@
      "output_type": "stream",
      "text": [
       "Distances After k-NN:\n",
-      " [[  0.           0.66601023   0.66601102 ... 104.2755673   16.2268326\n",
-      "  105.28858983]\n",
-      " [  0.66601023   0.           1.33106729 ... 103.97229757  16.53340469\n",
-      "  104.98213915]\n",
-      " [  0.66601102   1.33106729   0.         ... 104.53770236  15.90256201\n",
-      "  105.55377078]\n",
+      " [[ 0.          0.10401448  0.10536496 ... 79.23180989 79.21296825\n",
+      "  79.19854616]\n",
+      " [ 0.10401448  0.          0.15702782 ... 79.14440044 79.12624607\n",
+      "  79.11235943]\n",
+      " [ 0.10536496  0.15702782  0.         ... 79.20928355 79.19032019\n",
+      "  79.17589764]\n",
       " ...\n",
-      " [104.2755673  103.97229757 104.53770236 ...   0.          96.08895249\n",
-      "    2.32649574]\n",
-      " [ 16.2268326   16.53340469  15.90256201 ...  96.08895249   0.\n",
-      "   97.25275122]\n",
-      " [105.28858983 104.98213915 105.55377078 ...   2.32649574  97.25275122\n",
-      "    0.        ]]\n"
+      " [79.23180989 79.14440044 79.20928355 ...  0.          1.10377604\n",
+      "   1.98698228]\n",
+      " [79.21296825 79.12624607 79.19032019 ...  1.10377604  0.\n",
+      "   0.884884  ]\n",
+      " [79.19854616 79.11235943 79.17589764 ...  1.98698228  0.884884\n",
+      "   0.        ]]\n"
      ]
     }
    ],
