--- a/script.ipynb
+++ b/script.ipynb
@@ -1342,99 +1342,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "matrice sqeuclidean b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(11994,)\n",
-      "[1950.2314 3040.0283 3105.3853 ... 6075.3086 5692.7305 6270.884 ]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def normes_euclidiennes_carrees_b(bar_b):\n",
-    "    # Calculer la matrice des normes euclidiennes au carré\n",
-    "    normes_carrees = np.sum(bar_b**2, axis=1)\n",
-    "\n",
-    "    return normes_carrees\n",
-    "\n",
-    "matrix_b = normes_euclidiennes_carrees_b(b)\n",
-    "print(matrix_b.shape)\n",
-    "print(matrix_b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Distances After k-NN:\n",
-      " [[ 0.          4.0750322   4.11605999 ... 94.85239976 93.48194688\n",
-      "  92.41829745]\n",
-      " [ 4.0750322   0.          0.22200313 ... 95.12330824 93.75941502\n",
-      "  92.67036796]\n",
-      " [ 4.11605999  0.22200313  0.         ... 95.34266996 93.97749569\n",
-      "  92.89024164]\n",
-      " ...\n",
-      " [94.85239976 95.12330824 95.34266996 ...  0.          3.86468243\n",
-      "   3.1547582 ]\n",
-      " [93.48194688 93.75941502 93.97749569 ...  3.86468243  0.\n",
-      "   5.6318603 ]\n",
-      " [92.41829745 92.67036796 92.89024164 ...  3.1547582   5.6318603\n",
-      "   0.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "def matrix_distances_after_knn(b_hat_n, number_neigh=3):\n",
-    "    \"\"\"\n",
-    "    Calculate distances between barycenters after the k-NN process.\n",
-    "\n",
-    "    Parameters:\n",
-    "    - b_hat: array-like, shape (M, 3)\n",
-    "        Barycenters after k-NN.\n",
-    "    - number_neigh: int, optional (default=3)\n",
-    "        Number of neighbors for k-NN.\n",
-    "\n",
-    "    Returns:\n",
-    "    - distances_after: array-like, shape (M, M)\n",
-    "        Matrix of distances between barycenters after the k-NN process.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Connect the extended graph using the k-NN process\n",
-    "    extended_graph = knn_and_extended_graph(b_hat_n, number_neigh)\n",
-    "\n",
-    "    # Extract barycenters after the k-NN process\n",
-    "    b_hat_extended = np.array(list(extended_graph._node.keys()))\n",
-    "\n",
-    "    # Calculate distances after k-NN\n",
-    "    distances_after = cdist(b_hat_extended, b_hat_extended)\n",
-    "\n",
-    "    return distances_after\n",
-    "\n",
-    "# Example usage with b_hat\n",
-    "distances_after = matrix_distances_after_knn(b_hat)\n",
-    "\n",
-    "# Print the results\n",
-    "print(\"Distances After k-NN:\\n\", distances_after)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Triangle Collision Loss"
    ]
   },
@@ -1452,7 +1359,7 @@
     }
    ],
    "source": [
-    "def L_c(p_t, m_c_t, Fs):\n",
+    "def compute_lc_le_lo(p_t, m_c_e_o, Fs):\n",
     "    \"\"\"\n",
     "    Compute the collision loss term L_c.\n",
     "\n",
@@ -1464,17 +1371,17 @@
     "    Returns:\n",
     "    - L_c: Collision loss term\n",
     "    \"\"\"\n",
-    "    assert len(p_t) == len(m_c_t), \"Input arrays must have the same length\"\n",
+    "    assert len(p_t) == len(m_c_e_o), \"Input arrays must have the same length\"\n",
     "\n",
-    "    penalty_per_triangle = p_t * m_c_t\n",
+    "    penalty_per_triangle = p_t * m_c_e_o\n",
     "\n",
     "    # Sum the penalties for all selected triangles\n",
     "    total_penalty = np.sum(penalty_per_triangle)\n",
     "\n",
     "    # Compute the collision loss term L_c\n",
-    "    L_c = (1 / len(Fs)) * total_penalty\n",
+    "    L_c_e_o = (1 / len(Fs)) * total_penalty\n",
     "\n",
-    "    return L_c\n",
+    "    return L_c_e_o\n",
     "\n",
     "# Example usage:\n",
     "# Replace the arrays below with your actual data\n",
@@ -1482,12 +1389,52 @@
     "# m_c_t = numpy array containing the number of faces penetrated by each triangle\n",
     "# Fs = 3D numpy array representing the vertices of triangles\n",
     "p_t = selected_triangles_indexes\n",
-    "m_c_t = np.random.rand(500, 1)  # Given data\n",
-    "Fs = triangles  # Given data\n",
-    "\n",
-    "collision_loss = L_c(p_t, m_c_t, Fs)\n",
-    "print(\"Collision Loss:\", collision_loss)\n"
+    "Fs = triangles  # Given data"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc = np.zeros((500))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
