added final loss

--- a/script.ipynb
+++ b/script.ipynb
@@ -1188,7 +1188,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "barycentres b et b_hat"
+    "### d_f_S_Ss"
    ]
   },
   {
@@ -1259,13 +1259,6 @@
     "b_hat = np.mean(selected_triangles, axis=1)\n",
     "print(b_hat.shape)\n",
     "print(\"B_HAT : \", b_hat)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "test matrice des normes euclidiennes entre b et b_hat"
    ]
   },
   {
@@ -1343,6 +1336,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### d_r_S_Ss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_r_S_Ss = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Triangle Collision Loss"
    ]
   },
@@ -1399,7 +1408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lc"
+    "### Lc"
    ]
   },
   {
@@ -1441,7 +1450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Le"
+    "### Le"
    ]
   },
   {
@@ -1482,16 +1491,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lo"
+    "### Lo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mo = np.zeros((500))"
+    "mo = np.zeros((500))\n",
+    "L_o = 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Final Loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85941189.9563886\n"
+     ]
+    }
+   ],
+   "source": [
+    "lambda_c, lambda_e, lambda_o = 0.01, 0.01, 0.01\n",
+    "\n",
+    "\n",
+    "Loss_L = prob_chamfer_dist + d_f_S_Ss + d_r_S_Ss + (lambda_c * L_c) + (lambda_e * L_e) + (lambda_o * L_o)\n",
+    "print(Loss_L)"
    ]
   }
  ],
