#Échantillonnage de points : prélèvement de 100 points à partir de chaque triangle de triangles

--- a/script.ipynb
+++ b/script.ipynb
@@ -1487,11 +1487,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "igraph_g = igraphGraph(directed=extended_graph.is_directed()).from_networkx(extended_graph)\n",
+    "print(igraph_g.summary())\n",
+    "\n",
+    "triangles_ids_igraph = np.array(igraph_g.cliques(min=3, max=3))\n",
+    "print(\" IDS TRI\", triangles_ids_igraph[:3])\n",
+    "print(len(triangles_ids_igraph))\n",
+    "\n",
+    "\n",
+    "triangles = np.array(igraph_g.vs['_nx_name'])[triangles_ids_igraph]   #les triangles\n",
+    "# triangles = [list(map(tuple, row)) for row in triangles.tolist()]\n",
+    "print(\"TRI\",triangles)\n",
+    "print(len(triangles))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Échantillonnage de points : prélèvement de 100 points à partir de chaque triangle.\n",
+    "\n",
+    "def sample_points_from_triangle(triangle, num_points=100):\n",
+    "    v1, v2, v3 = triangle\n",
+    "    bary_coords = np.random.rand(num_points, 2)\n",
+    "    sqrt_bary_coords = np.sqrt(bary_coords[:, 0])\n",
+    "\n",
+    "    x_coords = (1 - sqrt_bary_coords) * v1[0] + (sqrt_bary_coords * (1 - bary_coords[:, 1])) * v2[0] + (sqrt_bary_coords * bary_coords[:, 1]) * v3[0]\n",
+    "    y_coords = (1 - sqrt_bary_coords) * v1[1] + (sqrt_bary_coords * (1 - bary_coords[:, 1])) * v2[1] + (sqrt_bary_coords * bary_coords[:, 1]) * v3[1]\n",
+    "    z_coords = (1 - sqrt_bary_coords) * v1[2] + (sqrt_bary_coords * (1 - bary_coords[:, 1])) * v2[2] + (sqrt_bary_coords * bary_coords[:, 1]) * v3[2]\n",
+    "\n",
+    "    sampled_points = np.column_stack((x_coords, y_coords, z_coords))\n",
+    "    return sampled_points\n",
+    "\n",
+    "\n",
+    "# Prélèvement de 100 points de chaque triangle\n",
+    "sampled_points_list = [sample_points_from_triangle(triangle, num_points=100) for triangle in triangles]\n",
+    "\n",
+    "# Affichage des points échantillonnés pour le premier triangle (vous pouvez boucler pour afficher pour tous les triangles)\n",
+    "print(\"Points échantillonnés pour le premier triangle :\")\n",
+    "print(sampled_points_list[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mo = np.zeros((500))"
+    "mo = np.zeros((500))\n"
    ]
   }
  ],
@@ -1511,7 +1560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
